--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -234,7 +234,7 @@
     <main>
       <div class="filters-container">
         <div class="search-container">
-      <input type="text" id="searchInput" placeholder="Поиск по каталогу..." oninput="handleSearch()">
+      <input type="text" id="searchInput" placeholder="Поиск товаров..." oninput="handleSearch()">
         </div>
         <div class="scrollbar" id="scrollbar"></div>
         <div class="price-filter">
