--- a/project pages/zooizbrannoe.html
+++ b/project pages/zooizbrannoe.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="../img/Mask group.png" type="image/x-icon" />
   </head>
   <body>
     <header>
