--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -211,9 +211,11 @@
     <main>
       <div class="filters-container">
         <div class="slide">
+          <h3>Поиск</h3>
           <div class="search-container">
             <input type="text" id="searchInput" placeholder="Поиск товаров..." oninput="handleSearch()">
           </div>
+          <h3>Категории</h3>
           <div class="scrollbar" id="scrollbar"></div>
           <div class="price-filter">
           <h3>Фильтры</h3>
