--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -17,17 +17,17 @@
   bottom: 20px;
   right: 20px;
   z-index: 1000;
-  background: #44007b;
+  background: #62208A;
   border: none;
-  border-radius: 20px;
+  border-radius: 50%;
   padding: 15px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
 
 .mobile-filter-btn img {
-  width: 24px;
-  height: 24px;
+  width: 70px;
+  height: 70px;
 }
 
 @media (max-width: 768px) {
