Тык по картинке

--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -20,14 +20,14 @@
   background: #62208A;
   border: none;
   border-radius: 50%;
-  padding: 15px;
+  padding: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  cursor: pointer;
 }
 
 .mobile-filter-btn img {
   width: 70px;
   height: 70px;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
@@ -90,8 +90,8 @@
       </nav>
     </header>
     <div class="men">
-      <button class="mobile-filter-btn" id="mobileFilterBtn">
-        <img src="../img/filter-icon.svg" alt="Фильтры">
+      <button class="mobile-filter-btn">
+        <img src="../img/filter-icon.svg" alt="Фильтры" id="mobileFilterBtn">
       </button>
       <div class="burger-menu">
         <div class="menu-icon" id="burger-icon">
