--- a/project pages/mobilemodal.html
+++ b/project pages/mobilemodal.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Авторизация</title>
-  <link rel="stylesheet" href="../css/zooakaunt.css">
-  <link rel="stylesheet" href="../css/zoopages.css">
-  <link rel="icon" href="../img/Mask group.png" type="image/x-icon">
+  <link rel="stylesheet" href="../css/page2.css" />
+    <link rel="stylesheet" href="../css/zooakaunt.css" />
+    <link rel="stylesheet" href="../css/zoopages.css" />
+    <link rel="stylesheet" href="../css/zookorzina.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
+      rel="stylesheet"
+    />
+    
+    <link rel="icon" href="../img/Mask group.png" type="image/x-icon" />
 </head>
 <body>
   <header>
