--- a/project pages/mobilemodal.html
+++ b/project pages/mobilemodal.html
@@ -18,9 +18,33 @@
     <link rel="icon" href="../img/Mask group.png" type="image/x-icon" />
 </head>
 <body>
-  <header>
-    <img src="../img/Mask group.png" alt="Логотип PetJet" class="logo">
-  </header>
+  <header>    
+        <img src="../img/Mask group.png" alt="Логотип PetJet" class="logo" />
+        <nav>
+          <a href="zoomagazin.html"
+            ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
+          ></a>
+          <a href="zooizbrannoe.html"
+            ><div class="cerb">
+              Избранное
+              <img
+                src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+              /></div
+          ></a>
+          <a href="zookorzina.html"
+            ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
+          ></a>
+          <a href="#" id="openRegistration"
+            >
+            <a href="#" id="openLogin">
+            <div class="cerb">
+              Войти
+              <img
+                src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+              /></div
+          ></a>
+        </nav>
+      </header>
   <main>
     <div class="mod" id="loginModal">
       <div class="mod-content">
