--- a/project pages/mobilemodal.html
+++ b/project pages/mobilemodal.html
@@ -95,18 +95,33 @@
       </div>
     </div>
   </main>
-  <footer class="footer">
-    <div class="footer-section">
-      <p>Как связаться с нами</p>
-      <ul>
-        <li><a href="#">+7(495)-777-77-77</a></li>
-      </ul>
-      <div class="social-icons">
-        <a href="#"><img src="../img/vk.svg" alt="VK"></a>
-        <a href="#"><img src="../img/tg.svg" alt="Telegram"></a>
+<footer class="footer">
+      <div class="footer-section">
+        <p>Как связаться с нами</p>
+        <ul>
+          <li><a href="#">+7(495)-777-77-77</a></li>
+        </ul>
+        <div class="social-icons">
+          <a href="#"><img src="../img/vk.svg" alt="VK" /></a>
+          <a href="#"><img src="../img/tg.svg" alt="Telegram" /></a>
+        </div>
       </div>
-    </div>
-  </footer>
+      <div class="footer-section">
+        <p>Пользователям</p>
+        <ul>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка и оплата</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <p>О нас</p>
+        <ul>
+          <li><a href="#">Адреса</a></li>
+          <li><a href="#">О компании</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+    </footer>
   <script>
     function closeModal(modalId) {
       document.getElementById(modalId).style.display = "none";
