--- a/project pages/mobilemodal.html
+++ b/project pages/mobilemodal.html
@@ -46,54 +46,7 @@
         </nav>
       </header>
   <main>
-    <div class="mod" id="loginModal">
-      <div class="mod-content">
-        <span class="close" onclick="closeModal('loginModal')">&times;</span>
-        <h2>Авторизация</h2>
-        <form id="loginForm">
-          <div class="input-group">
-            <input type="text" id="login" placeholder="Логин" required>
-          </div>
-          <div class="input-group">
-            <input type="password" id="password" placeholder="Пароль" required>
-          </div>
-          <button type="submit" class="submit-button">Войти</button>
-          <p style="display: inline">
-            или
-            <a href="#" class="switch-link" onclick="switchToRegistration()">Зарегистрироваться</a>
-          </p>
-        </form>
-      </div>
-    </div>
-
-    <div class="mod" id="registrationModal">
-      <div class="mod-content">
-        <span class="close" onclick="closeModal('registrationModal')">&times;</span>
-        <h2>Регистрация</h2>
-        <form id="registrationForm">
-          <div class="input-group">
-            <input type="email" id="email" placeholder="Почта" required>
-          </div>
-          <div class="input-group">
-            <input type="tel" id="phone" placeholder="Телефон" required>
-          </div>
-          <div class="input-group">
-            <input type="text" id="regLogin" placeholder="Логин" required>
-          </div>
-          <div class="input-group">
-            <input type="password" id="regPassword" placeholder="Пароль" required>
-          </div>
-          <div class="input-group">
-            <input type="password" id="confirmPassword" placeholder="Повторите пароль" required>
-          </div>
-          <button type="submit" class="submit-button">Зарегистрироваться</button>
-          <p style="display: inline">
-            или
-            <a href="#" class="switch-link" onclick="switchToLogin()">Войти</a>
-          </p>
-        </form>
-      </div>
-    </div>
+    <h2>hhthhhftr</h2>
   </main>
 <footer class="footer">
       <div class="footer-section">
