--- a/project pages/mobilemodal.html
+++ b/project pages/mobilemodal.html
@@ -15,9 +15,55 @@
     rel="stylesheet"
   />
   <link rel="icon" href="../img/Mask group.png" type="image/x-icon" />
+  <style>
+    /* Стили для закрепления footer внизу страницы */
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      margin: 0;
+    }
+    main {
+      flex: 1;
+      padding: 20px;
+    }
+    .footer {
+      background-color: #f8f8f8;
+      padding: 20px;
+      text-align: center;
+      margin-top: auto; /* Закрепляем footer внизу */
+    }
+    /* Стили для мобильного header */
+    .mobile-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px;
+      background-color: #fff;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    .mobile-header .logo {
+      width: 50px;
+      height: 50px;
+    }
+    .mobile-header nav {
+      display: flex;
+      gap: 10px;
+    }
+    .mobile-header .cerb {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+    .mobile-header .cerb img {
+      width: 20px;
+      height: 20px;
+    }
+  </style>
 </head>
 <body>
-  <header>    
+  <!-- Мобильный header -->
+  <header class="mobile-header">
     <img src="../img/Mask group.png" alt="Логотип PetJet" class="logo" />
     <nav>
       <a href="zoomagazin.html"><div class="cerb">Каталог <img src="../img/Vector.svg" /></div></a>
@@ -26,6 +72,7 @@
       <a href="#" id="openRegistration"><div class="cerb">Войти <img src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" /></div></a>
     </nav>
   </header>
+
   <main>
     <div class="auth-container">
       <!-- Форма авторизации -->
@@ -68,6 +115,8 @@
       </div>
     </div>
   </main>
+
+  <!-- Закрепленный footer -->
   <footer class="footer">
     <div class="footer-section">
       <p>Как связаться с нами</p>
@@ -95,6 +144,7 @@
       </ul>
     </div>
   </footer>
+
   <script>
     // Переключение между формами регистрации и авторизации
     function switchToLogin() {
