--- a/project pages/mobilemodal.html
+++ b/project pages/mobilemodal.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../css/page2.css" />
   <link rel="stylesheet" href="../css/zooakaunt.css" />
   <link rel="stylesheet" href="../css/zoopages.css" />
+  <link rel="stylesheet" href="../css/zooizbrannoe.css" />
   <link rel="stylesheet" href="../css/zookorzina.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,51 +16,7 @@
     rel="stylesheet"
   />
   <link rel="icon" href="../img/Mask group.png" type="image/x-icon" />
-  <style>
-    /* Стили для закрепления footer внизу страницы */
-    body {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      margin: 0;
-    }
-    main {
-      flex: 1;
-      padding: 20px;
-    }
-    .footer {
-      background-color: #f8f8f8;
-      padding: 20px;
-      text-align: center;
-      margin-top: auto; /* Закрепляем footer внизу */
-    }
-    /* Стили для мобильного header */
-    .mobile-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px;
-      background-color: #fff;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    .mobile-header .logo {
-      width: 50px;
-      height: 50px;
-    }
-    .mobile-header nav {
-      display: flex;
-      gap: 10px;
-    }
-    .mobile-header .cerb {
-      display: flex;
-      align-items: center;
-      gap: 5px;
-    }
-    .mobile-header .cerb img {
-      width: 20px;
-      height: 20px;
-    }
-  </style>
+  
 </head>
 <body>
   <!-- Мобильный header -->
