--- a/project pages/mobilemodal.html
+++ b/project pages/mobilemodal.html
@@ -29,7 +29,45 @@
       <a href="#" id="openRegistration"><div class="cerb">Войти <img src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" /></div></a>
     </nav>
   </header>
-
+<div class="men">
+      <div class="burger-menu">
+        <div class="menu-icon" id="burger-icon">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+      </div>
+      <nav class="nav-menu" id="nav-menu">
+        <ul>
+          <a href="zoomagazin.html"
+            ><div class="negr">Каталог <img src="../img/Vector.svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
+          >
+          </a>
+          <img src="../img/Line 5.svg" class="line" />
+          <a href="zooizbrannoe.html"
+            ><div class="negr">
+              Избранное
+              <img
+                src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
+              /> <img src="../img/-_.svg" class="strela" /></div
+          ></a>
+          <img src="../img/Line 5.svg" class="line" />
+          <a href="zookorzina.html"
+            ><div class="negr">Корзина <img src="../img/Vector (1).svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
+          ></a>
+          <img src="../img/Line 5.svg" class="line" />
+          <a href="#"
+            ><div class="negr">
+              Войти
+              <img
+                src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
+              /> <img src="../img/-_.svg" class="strela" /></div
+          ></a>
+          <img src="../img/Line 5.svg" class="line" />
+        </ul>
+      </nav>
+      <div style="height: 40px"></div>
+    </div>
   <main>
     <div class="auth-container">
       <!-- Форма авторизации -->
