--- a/project pages/mobilemodal.html
+++ b/project pages/mobilemodal.html
@@ -18,6 +18,11 @@
   <link rel="icon" href="../img/Mask group.png" type="image/x-icon" />
   
 </head>
+  <style>
+    main {
+  min-height: calc(100vh - 320px);
+}
+  </style>
 <body>
   <!-- Мобильный header -->
   <header class="mobile-header">
