--- a/project pages/zookorzina.html
+++ b/project pages/zookorzina.html
@@ -272,12 +272,34 @@
     </footer>
   </article>
     <script>
+
       document.addEventListener("DOMContentLoaded", function () {
-  const registrationForm = document.getElementById("registrationForm");
-  const loginForm = document.getElementById("loginForm");
-  const loginModal = document.getElementById("loginModal");
-  const registrationModal = document.getElementById("registrationModal");
-  const body = document.body;
+    const registrationModal = document.getElementById("registrationModal");
+    const loginModal = document.getElementById("loginModal");
+    const openRegistrationButton = document.getElementById("openRegistration");
+    const openLoginButton = document.getElementById("openLogin");
+
+    openRegistrationButton.addEventListener("click", function (event) {
+        event.preventDefault(); // Предотвращаем переход по ссылке
+        registrationModal.style.display = "block";
+    });
+
+    openLoginButton.addEventListener("click", function (event) {
+        event.preventDefault(); // Предотвращаем переход по ссылке
+        loginModal.style.display = "block";
+    });
+
+    // Закрытие модальных окон при клике вне их области
+    window.addEventListener("click", function (event) {
+        if (event.target === registrationModal) {
+            registrationModal.style.display = "none";
+        }
+        if (event.target === loginModal) {
+            loginModal.style.display = "none";
+        }
+    });
+});
+    
 
   // Обработчик регистрации
   registrationForm.addEventListener("submit", function (event) {
