--- a/project pages/zookorzina.html
+++ b/project pages/zookorzina.html
@@ -75,7 +75,7 @@
               ><div class="negr">Корзина <img src="../img/Vector (1).svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
             ></a>
             <img src="../img/Line 5.svg" class="line" />
-            <a href="#"
+            <a href="mobilemodal.html"
               ><div class="negr">
                 Войти
                 <img
